[package]
name = "war"
version = "0.1.0"
edition = "2024"

[lib]
name = "war_bindings"
path = "lib.rs"

[dependencies]
leo-bindings = { git = "https://github.com/henrikkv/leo-bindings" }
leo-bindings-credits = { git = "https://github.com/henrikkv/leo-bindings" }
snarkvm = "4.2.0"
anyhow = "1.0"
leo-span = "3.2.0"
leo-package = "3.2.0"
leo-ast = "3.2.0"
ureq = { version = "2.6", features = ["json"] }
serde_json = "1.0"
indexmap = "2.0"
aleo-std = { version = "1.0.1", features = ["storage"] }
rand = "0.8"
http = "1.3.1"
