[package]
name = "war"
version = "0.1.0"
edition = "2024"

[lib]
name = "war_bindings"
path = "lib.rs"

[features]
default = ["testnet", "interpreter"]
mainnet = []
testnet = []
canary = []
interpreter = []

[dependencies]
leo-bindings = { git = "https://github.com/henrikkv/leo-bindings" }
leo-bindings-credits = { git = "https://github.com/henrikkv/leo-bindings", features = ["testnet", "interpreter"] }
rand = "0.8"
snarkvm = "4.2.1"
