[workspace]
members = [".", "imports/*"]

[workspace.dependencies]
leo-bindings = { git = "https://github.com/henrikkv/leo-bindings" }
rand = "0.8"
snarkvm = { git = "http://github.com/ProvableHQ/snarkVM.git", rev = "eb44d39" }

# BEGIN IMPORTS
credits_bindings = { git = "https://github.com/henrikkv/leo-bindings" }
# END IMPORTS

[package]
name = "war_game_bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "war_game_bindings"
path = "lib.rs"

[dependencies]
leo-bindings.workspace = true
rand.workspace = true
snarkvm.workspace = true

zk_deck_shuffle_bindings = { path = "imports/zk_deck_shuffle/" }

zk_sra_encryption_bindings = { path = "imports/zk_sra_encryption/" }

credits_bindings.workspace = true

[build-dependencies]
leo-bindings-core = { git = "https://github.com/henrikkv/leo-bindings" }
serde_json = "1"
